# Business-Plugin-Middleware

./: .env.example  .gitignore  .replit  BIGCAPITAL_DEVELOPMENT_SUMMARY.md  Dockerfile  Makefile  README.md  README_PLUGIN_ARCHITECTURE.md  REMOTE_TESTING_README.md  REPLIT_SETUP.md  dev-setup.sh  docker-compose.yml  fix-bigcapital.sh  main.py  pdf2md-plugin-instructure.md  pdf2md.md  pyproject.toml  quick_start.py  replit.nix  requirements-dev.txt  requirements.txt  run.py  setup-paperless.md  start-services.sh  start.sh  test_bigcapital_invoice.py  test_bigcapital_invoiceplane_integration.py  test_invoice_debug.py  test_plugin_architecture.py  test_sync_debug.py
.github/workflows/: ci.yml
config/: config.ini  config.ini.example  plugins.json  settings.py
core/: base_plugin.py  exceptions.py  ocr_processor.py  plugin_manager.py
database/: connection.py  models.py
docker/: Dockerfile  docker-compose.yml
docker/bigcapital/: .env  .env.example  BIGCAPITAL_STATUS.md  Dockerfile  Makefile  README.md  backup.sh  debug-bigcapital.sh  docker-compose.yml  docker-compose.yml.build  health-check.sh  integration.yml  nginx.conf
docker/bigcapitalpy/: .env  .env.example  .gitignore  docker-compose.yml  requirements.txt  setup-docker-files.sh
plugins/bigcapital/: README.md  client.py  mappers.py  models.py  plugin.py
processing/: document_processor.py
scripts/: fix_bigcapital_config.py  init.sh  run.sh
tests/: test_bigcapital.py  test_bigcapital_plugin.py  test_clients.py  test_core.py  test_database.py
web/: __init__.py  app.py  routes.py
(+41 files in other folders)
